# ImageViewer

./: .gitignore  CMakeLists.txt  Cargo.toml  ImageViewer.sln  README.md  TODO.md  build.bat  main.cpp  prepare.bat  prepare.sh  prepare_mingw32.sh  vcpkg.json
.github/workflows/: build.yml
ImageViewer/: ImageViewer.csproj  NativeMethods.cs  Program.cs  Utility.cs  frmMain.Designer.cs  frmMain.cs  frmMain.resx  packages.config
ImageViewer/Controls/: CropControl.Designer.cs  CropControl.cs  FlatButton.cs  FlatNumericUpDown.cs  ImageRenderer.cs  ResizeControl.Designer.cs  ResizeControl.cs
ImageViewer/Effects/: SeamCarver.cs
ImageViewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
ci/: Containerfile  build-and-run.sh  entrypoint.sh
src/: CMakeLists.txt  Image.ixx  RawImage.ixx  TexturePool.ixx  Window.ixx  main.cpp  main.rs
src/editor/: CMakeLists.txt  package.json  tsconfig.json  tsserver.ts  wasmedge_glue.cpp
src/imageviewer/: CMakeLists.txt  FilterCore.hpp  FilterPlugin.ixx  FilterPluginDef.h  FilterPluginPixman.ixx  HotkeysHandler.ixx  Image.ixx  ImageLoaderJpeg.ixx  ImageLoaderPng.ixx  ImageLoaderStb.ixx  ImageLoaderTiff.ixx  ImageLoaderWebp.ixx  ImagePluginDef.h  PluginManager.ixx  RendererOpenGL.ixx  RendererPluginDef.h  TexturePool.ixx  Utils.hpp  Window.ixx  main.cpp  main_generic.hpp  main_unix.cpp  main_windows.cpp
src/media/: Buffer.ixx  CMakeLists.txt  Correspondence.ixx  CorrespondenceInterpreter.ixx  Dispatcher.ixx  Processor.ixx  Scene.ixx  View.ixx  ViewCorrespondence.ixx
src/tests/: CMakeLists.txt  test_iwimageformat.cpp
src/ui/: CMakeLists.txt  View.ixx
